<resources>
    <string name="app_name">JobSearchStatistic</string>
    <string name="default_date">17.01.2021</string>
    <string name="default_status">DECLINE</string>
    <string name="default_company_name">Company</string>
    <string name="default_job_source">Source</string>
    <string name="default_person_name">Person</string>
    <string name="add_vacancy">ADD VACANCY:</string>
    <string name="company_name">Company name</string>
    <string name="add_vacancy_button">Add vacancy</string>
    <string name="vacancy_status">Vacancy Status</string>
    <string name="vacancy_source">Vacancy source</string>
    <string name="recruiter_name">Recruiter name</string>
</resources>