<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addVacancyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_vacancy"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addVacancyText"
        app:layout_constraintBottom_toTopOf="@+id/vacancySourceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/company_name"/>

    <TextView
        android:id="@+id/vacancySourceTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vacancySourceSpinner"
        android:text="@string/vacancy_source"/>

    <Spinner
        android:id="@+id/vacancySourceSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/companyTextView"
        app:layout_constraintBottom_toTopOf="@+id/sourcePersonTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sourcePersonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/statusSpinner"
        app:layout_constraintTop_toBottomOf="@+id/vacancySourceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/recruiter_name"/>

    <TextView
        android:id="@+id/statusTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/statusSpinner"
        android:text="@string/vacancy_status"/>

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sourcePersonTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addVacancyButton" />

    <Button
        android:id="@+id/addVacancyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_vacancy_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>